--- a/packages/restapi/package.json
+++ b/packages/restapi/package.json
@@ -6,15 +6,26 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "api": "ts-node src/index.ts"
+    "api": "nodemon src/index.ts",
+    "tests": "npm run tests:unittests",
+    "tests:unittests": "ts-mocha -p ./tsconfig.test.json -r tsconfig-paths/register src/**/tests/**/*.spec.ts"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "pino": "^8.14.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.5",
     "@types/express": "^4.17.17",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.5",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "nodemon": "^3.0.1",
+    "ts-mocha": "^10.0.0",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.1",
     "typescript": "^5.1.6"
