--- a/packages/restapi/package.json
+++ b/packages/restapi/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pino": "^8.14.2",
     "ts-node": "^10.9.1"
