--- a/packages/restapi/package.json
+++ b/packages/restapi/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "pino": "^8.14.2",
     "ts-node": "^10.9.1"
   },
@@ -21,6 +22,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.5",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.4.5",
     "chai": "^4.3.7",
