--- a/packages/restapi/package.json
+++ b/packages/restapi/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "api": "nodemon src/index.ts",
+    "restapi": "ts-node src/index.ts",
+    "restapi:develop": "nodemon src/index.ts",
     "tests": "npm run tests:unittests",
     "tests:unittests": "ts-mocha -p ./tsconfig.test.json -r tsconfig-paths/register src/**/tests/**/*.spec.ts"
   },
@@ -15,8 +16,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
+    "mysql2": "^3.5.2",
     "pino": "^8.14.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -24,7 +27,9 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
+    "@types/mysql": "^2.15.21",
     "@types/node": "^20.4.5",
+    "@types/uuid": "^9.0.2",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
