refactor(repository): connect to the repository with an URI

--- a/restapi/.env.example
+++ b/restapi/.env.example
@@ -1,2 +1,15 @@
-RESTAPI_PORT=0
+# The token for crypt functions
+# required
 RESTAPI_TOKEN=
+
+# The port where the RestAPI listen
+# by default the port is 300
+RESTAPI_PORT=9000
+
+# the repository to use
+# by default the repository is the in memory
+REPOSITORY=sql
+
+# The URI repository to connect
+# required if you use sql
+REPOSITORY_URI=mysql://user:password@localhost:3306/databasename
