--- a/restapi/package.json
+++ b/restapi/package.json
@@ -23,6 +23,8 @@
     "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.2",
     "pino": "^8.14.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   },
@@ -34,6 +36,8 @@
     "@types/mocha": "^10.0.1",
     "@types/mysql": "^2.15.21",
     "@types/node": "^20.4.5",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^9.0.2",
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
