--- a/restapi/package.json
+++ b/restapi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ixmael/magiclog-app",
+  "name": "@magiclog/restapi",
   "version": "0.0.1",
   "main": "index.js",
   "type": "module",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/chai": "^4.3.5",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mocha": "^10.0.1",
