--- a/restapi/package.json
+++ b/restapi/package.json
@@ -10,7 +10,8 @@
     "email": "hola@irm.mx"
   },
   "scripts": {
-    "restapi": "ts-node src/index.ts",
+    "build": "tsc --project tsconfig.production.json",
+    "restapi": "node --experimental-specifier-resolution=node dist/index.js",
     "restapi:develop": "nodemon src/index.ts",
     "manager:add": "ts-node scripts/manager.ts",
     "tests": "npm run tests:unittests",
@@ -26,7 +27,6 @@
     "pino": "^8.14.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "ts-node": "^10.9.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -44,7 +44,9 @@
     "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
+    "openapi-types": "^12.1.3",
     "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "tslib": "^2.6.1",
     "typescript": "^5.1.6"
